--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,11 @@ ul {
 
 button {
   outline: none;
-  background: none;
   border: none;
   margin: 0;
   padding: 0;
+  background: #EC1F46;
+  color: #fff;
 }
 
 button:hover {
@@ -65,11 +66,6 @@ form, input {
   resize: none;
 }
 
-.button {
-  background: #EC1F46;
-  color: #fff;
-}
-
 .form-button {
   min-width: 160px;
   min-height: 50px;
@@ -82,6 +78,11 @@ form, input {
 .container {
   max-width: 1110px;
   margin: 0	auto;
+}
+
+.invalid {
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
 }
 
 @media (max-width: 1200px) {
@@ -1102,6 +1103,7 @@ template {
   height: 100%;
   background-color: rgba(10, 34, 61, 0.8);
   opacity: 0.8;
+  z-index: 0;
 }
 
 .newsletter-wrapper {
@@ -1140,8 +1142,6 @@ template {
   position: relative;
   width: 350px;
   height: 45px;
-  border-radius: 4px;
-  overflow: hidden;
   color: #BDBDBD;
 }
 
@@ -1153,6 +1153,9 @@ template {
   padding-right: 75px;
   font-size: 14px;
   font-weight: 300;
+  z-index: 1;
+  border-radius: 4px;
+  border: none;
 }
 
 .subscribe__button {
@@ -1163,6 +1166,14 @@ template {
   padding: 0 18px;
   font-size: 12px;
   font-weight: 600;
+  z-index: 1;
+  border-radius: 0 4px 4px 0;
+}
+
+.subscribe__invalid {
+  position: relative;
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
 }
 
 @media (max-width: 992px) {
@@ -1938,6 +1949,10 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
@@ -2001,7 +2016,7 @@ template {
 }
 
 @media (max-width: 1200px) {
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -2016,7 +2031,7 @@ template {
 }
 
 @media (max-width: 992px) {
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 49%;
         flex-basis: 49%;
   }
@@ -2068,7 +2083,7 @@ template {
   .footer {
     padding: 73px 0 33px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -2229,13 +2244,13 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__info {
@@ -2267,6 +2282,7 @@ template {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-top: 15px;
 }
 
 @media (max-width: 576px) {
