--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -65,8 +65,10 @@
 		font-size: 14px
 		line-height: 160%
 	&__input
-		margin-bottom: 15px
-		flex-basis: 48%
+		width: 100%
+		&-group
+			margin-bottom: 15px
+			flex-basis: 48%
 	&__message
 		height: 123px
 		flex-basis: 100%
@@ -103,7 +105,8 @@
 @media	( max-width: 1200px )
 	.footer
 		&__input
-			flex-basis: 100%
+			&-group
+				flex-basis: 100%
 
 	.footer-bottom
 		&__wrapper
@@ -114,7 +117,8 @@
 @media	( max-width: 992px )
 	.footer
 		&__input
-			flex-basis: 49%
+			&-group
+				flex-basis: 49%
 		&-wrapper
 			grid-template-columns: repeat(6, 1fr)
 			grid-row-gap: 40px
@@ -145,7 +149,8 @@
 	.footer
 		padding: 73px 0 33px
 		&__input
-			flex-basis: 100%
+			&-group
+				flex-basis: 100%
 		&__logo
 			width: 104px
 
