--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -37,11 +37,11 @@
 		right: 18px
 	&__input
 		width: 100%
-		margin-bottom: 15px
+		margin-top: 15px
 	&__message 
 		width: 100%
 		min-height: 123px
-		margin-bottom: 15px
+		margin-top: 15px
 	&__info
 		font-weight: 700
 		font-size: 12px
@@ -60,6 +60,7 @@
 		justify-content: space-between
 		align-items: center
 		flex-wrap: wrap
+		margin-top: 15px
 
 @media	(max-width:	576px)
 	.modal
