--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -27,11 +27,10 @@ ul
 
 button
 	outline: none
+	background: none
 	border: none
 	margin: 0
 	padding: 0
-	background: $primary
-	color: #fff
 	&:hover
 		cursor: pointer
 
@@ -51,6 +50,10 @@ form,	input
 	padding: 18px 23px
 	border: none
 	resize: none
+
+.button
+	background: $primary
+	color: #fff
 
 .form-button
 	min-width: 160px
