--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -27,7 +27,7 @@
 			position: absolute
 			top: 12px
 			z-index: -10
-			left: 60px 
+			left: 60px
 			width: 70px
 			height: 47px
 			background-image: url(../img/quote-open.svg)
@@ -41,11 +41,12 @@
 			width: 70px
 			height: 47px
 			background-image: url(../img/quote-close.svg)
-			background-repeat: no-repeat			
+			background-repeat: no-repeat
 	&__profile
 		display: flex
 		flex-direction: column
 		align-items: center
+		width: 100%
 	&__avatar
 		margin-top: -45px
 		margin-bottom: 9px
@@ -53,7 +54,7 @@
 		height: 90px
 		border-radius: 50%
 		overflow: hidden
-	&__img 
+	&__img
 		height: 100%
 		width: 100%
 		object-fit: cover
@@ -69,9 +70,11 @@
 		line-height: 13px
 	&__rating
 		margin-bottom: 32px
-	&__text 
+	&__text
 		font-size: 12px
 		line-height: 160%
+		text-align: justify
+		max-width: 520px
 	&__button
 		position: absolute
 		top: 50%
@@ -88,7 +91,6 @@
 			right: 0
 			background-image: url(../img/review-right.svg)
 
-
 @media	(max-width:	992px)
 	.reviews
 		padding: 40px 0 60px
@@ -103,7 +105,7 @@
 		padding: 40px 0 36px
 		&-container
 			max-width: 98%
-		&__title 
+		&__title
 			font-size: 30px
 			margin-bottom: 50px
 	.reviews-slider
@@ -134,12 +136,3 @@
 			max-width: 250px
 		&__rating
 			margin-bottom: 16px
-
-	
-
-			
-			
-
-
-
-		
