--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -69,6 +69,10 @@ form,	input
 
 .invalid
 	color: $primary
+	//border-bottom: 1px solid $primary
+	border: none
+
+label.invalid
 	border-bottom: 1px solid $primary
 
 @media	(max-width:	1200px)
