--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -76,6 +76,7 @@
 		text-align: justify
 		max-width: 520px
 	&__button
+		cursor: pointer
 		position: absolute
 		top: 50%
 		transform: translateY(-50%)
