added map on click

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -161,12 +161,12 @@
 		margin-right: 8px
 
 .map
+	overflow: hidden
 	width: 347px
 	height: 213px
 	border-radius: 10px
-	overflow: hidden
-	&__img
-		max-width: 100%
+	background-image: url(/img/google-map.jpg)
+	background-size: cover
 
 @media	(max-width:	1200px)
 	.hotel-slider
