--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -12,6 +12,8 @@
 		width: 166px
 		grid-row: 1 / 2
 		align-self: stretch
+		&-img
+			max-width: 100%
 	&__categories
 		grid-row: 1 / 4
 	&__social
@@ -57,6 +59,7 @@
 	&__link
 		color: #BDBDBD
 	&__icon
+		vertical-align: middle
 		&-wrapper
 			min-width: 40px
 	&__text
