--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -160,12 +160,12 @@
 	&__icon
 		margin-right: 8px
 
-.map
+.hotel-map
 	overflow: hidden
 	width: 347px
 	height: 213px
 	border-radius: 10px
-	background-image: url(/img/google-map.jpg)
+	background-image: url(../img/google-map.jpg)
 	background-size: cover
 
 @media	(max-width:	1200px)
