--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -126,11 +126,15 @@
 				right: 50%
 				margin-right: -80px
 				transform: translate(50%, 0)
+
 @media	(max-width:	576px)
 	.reviews
 		&__title
 			font-size: 18px
 			margin-bottom: 42px
+	.reviews-slider
+		&__text
+			text-align: left
 
 @media	(max-width:	321px)
 	.reviews-slider
