--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -31,8 +31,12 @@
 			font-size: 12px
 			line-height: 15px
 	&-rating
-		max-width: 65px
 		min-height: 45px
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: center
+		padding: 0 7px
 		text-align: center
 		background-color: $primary
 		border-radius: 4px
